WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
12180
REGRESSION: Double-clicking on JS exception in JS log crashes in -[SharedBufferData initWithSharedBuffer:]
https://bugs.webkit.org/show_bug.cgi?id=12180
Summary
REGRESSION: Double-clicking on JS exception in JS log crashes in -[SharedBuff...
Mark Rowe (bdash)
Reported
2007-01-09 03:11:59 PST
Steps to reproduce: 1. Load
http://myspace.com/
2. Show the JS console. 3. Double-click on "SyntaxError - Parse error:
http://deeb.myspace.com/DartRichMedia_1_03.js
" Expected results: The URL would be loaded in a new window and its contents displayed. Actual results: Crash. Program received signal EXC_BAD_ACCESS, Could not access memory. Reason: KERN_PROTECTION_FAILURE at address: 0x00000000 0x013c662f in -[SharedBufferData initWithSharedBuffer:] () (gdb) bt #0 0x013c662f in -[SharedBufferData initWithSharedBuffer:] () #1 0x013c669b in WebCore::SharedBuffer::createNSData () #2 0x00323bce in -[WebDataSource data] () #3 0x003235c0 in -[WebDataSource mainResource] () #4 0x000a3905 in ?? () #5 0x000a3a5a in ?? () #6 0x000a3bda in ?? () #7 0x000a3c95 in ?? () #8 0x000a3ce2 in ?? () #9 0x9335cd88 in -[NSApplication sendAction:to:from:] () #10 0x0002b34b in ?? () #11 0x9335cce1 in -[NSControl sendAction:to:] () #12 0x933d53ba in -[NSTableView _sendAction:to:row:column:] () #13 0x933d4ace in -[NSTableView mouseDown:] () #14 0x9334c3af in -[NSWindow sendEvent:] () #15 0x9333e350 in -[NSApplication sendEvent:] () #16 0x00022f1e in ?? () #17 0x93268dfe in -[NSApplication run] () #18 0x9325cd2f in NSApplicationMain () #19 0x0005f7de in ?? () #20 0x0005f6f9 in ?? () (gdb)
Attachments
patch with change log
(1.16 KB, patch)
2007-01-11 07:33 PST
,
Darin Adler
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Darin Adler
Comment 1
2007-01-11 07:33:59 PST
Created
attachment 12361
[details]
patch with change log
mitz
Comment 2
2007-01-11 07:42:37 PST
Comment on
attachment 12361
[details]
patch with change log r=me
Darin Adler
Comment 3
2007-01-11 08:57:20 PST
Committed revision 18767.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug