        Reviewed by Mitz.

- fix http://bugs.webkit.org/show_bug.cgi?id=12180
          REGRESSION: Double-clicking on JS exception in JS log crashes in -[SharedBufferData initWithSharedBuffer:]

        * WebView/WebDataSource.mm: (-[WebDataSource data]): Added null check.



Canonical link: https://commits.webkit.org/15779@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18767 268f45cc-cd09-0410-ab3c-d52691b4dbfc